'Tiles' settings in Render/Performance panel don't respect keyframes #36454

Closed
opened 2013-08-13 07:47:52 +02:00 by Manu Järvinen · 3 comments

%%%GFX: nVidia Quadro 4000 2GB
OS: Windows 7 Pro, service pack 1
blender 2.68a official release win64
and
blender-2.68-r59096-win64

- Short description of error ---

If 'Tiles' settings in Render/Performance panel are keyframed (ie. frame1: 256x256 frame2: 512x512), rendering an animation uses only the tile size that was set for the first frame.

It would be useful to have them animated so that optimal rendering performance experiments would be easy to make.%%%

%%%GFX: nVidia Quadro 4000 2GB OS: Windows 7 Pro, service pack 1 blender 2.68a official release win64 and blender-2.68-r59096-win64 - Short description of error --- If 'Tiles' settings in Render/Performance panel are keyframed (ie. frame1: 256x256 frame2: 512x512), rendering an animation uses only the tile size that was set for the first frame. It would be useful to have them animated so that optimal rendering performance experiments would be easy to make.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%these settings are not animatable, fixed in r59296. Thanks for the report. :)%%%

%%%these settings are not animatable, fixed in r59296. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36454
No description provided.