Fix [#36454] 'Tiles' settings in Render/Performance panel don't respect keyframes

These are not animatable! Note this is the case of most (all?) render settings, maybe we should go over both Cycles and internal ones, there are still quite a bunch of them that are marked as animatable... :/